# armies-fighting--its-all-they-know

./: Cargo.toml  README.md
src/: main.rs
